# djangoldp

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  __init__.py  djldp_beta_hubl.yml  serializers.py  setup.cfg  setup.py  views.py
djangoldp/: __init__.py  admin.py  apps.py  check_integrity.py  cli.py  etag.py  factories.py  fields.py  filters.py  middleware.py  models.py  pagination.py  parsers.py  permissions.py  related.py  renderers.py  resolver.py  serializers.py  tests.py  urls.py  utils.py  views.py
djangoldp/activities/: __init__.py  errors.py  objects.py  services.py  verbs.py
djangoldp/conf/: default_settings.py  global_settings.py  ldpsettings.py  settings.py
djangoldp/conf/package_template/: README.md  setup.cfg
djangoldp/conf/package_template/app_name/: djangoldp_settings.py-tpl  djangoldp_urls.py-tpl  models.py-tpl  views.py-tpl
djangoldp/endpoints/: webfinger.py
djangoldp/migrations/: 0001_initial.py  0002_auto_20180913_1800.py  0002_auto_20190603_1145.py  0002_auto_20190905_1542.py  0002_auto_20190906_0642.py  0003_auto_20181004_1148.py  0003_auto_20190911_0931.py  0004_auto_20200221_1118.py  0005_auto_20200221_1127.py  0006_activity.py  0007_auto_20200429_1346.py  0008_auto_20200501_1207.py  0009_auto_20200505_1733.py  0010_follower.py  0011_auto_20200610_1323.py  0012_auto_20200617_1817.py  0013_auto_20200624_1709.py  0014_auto_20200909_2206.py  0015_auto_20210125_1847.py  0016_alter_activity_options_alter_follower_options_and_more.py  0017_alter_activity_urlid_alter_follower_urlid_and_more.py  0018_alter_activity_payload_alter_activity_response_body.py  0019_sitesettings.py  0020_rename_sitesettings_sitesetting.py  0021_add_timestamps_to_ldp_models.py
djangoldp/models/: __init__.py  models.py  site_setting.py  site_settings.py
djangoldp/serializers/: __init__.py  cache.py  fields.py  list_serializer.py  mixins.py  model_serializer.py
djangoldp/tests/: djangoldp_settings.py  djangoldp_urls.py  models.py  perf_result.csv  performance_runner.py  permissions.py  runner.py  server_settings.py  settings_default.py  settings_yaml.py  test_etag_compliance.py  test_ldp_compliance.py  test_pagination_cors.py  test_prefer_options.py  test_renderers_parsers.py  tests.py  tests_anonymous_permissions.py  tests_auto_author.py  tests_backlinks_service.py  tests_cache.py  tests_delete.py  tests_get.py  tests_guardian.py  tests_inbox.py  tests_ldp_model.py  tests_ldp_viewset.py  tests_model_serializer.py  tests_pagination.py  tests_perf_get.py  tests_performance.py  tests_permissions.py  tests_post.py  tests_resolver.py  tests_save.py  tests_settings.py  tests_sources.py  tests_temp.py  tests_update.py  tests_user_permissions.py  urls.py
djangoldp/views/: __init__.py  commons.py  inbox.py  instance_container.py  ldp_api.py  ldp_viewset.py  static.py  type_index.py  webfinger.py  webid.py
djangoldp_crypto/: README.md  admin.py  models.py
djangoldp_crypto/migrations/: 0001_initial.py
djangoldp_crypto/tests/: runner.py  settings_default.py  tests_rsakey.py
docs/: ARCHITECTURE.md  commands.md  create_model.md  howto_use_client_beta.md  http_headers.md  installation_guide.md  ldp_compliance_status.md  migration_guide.md  project_structure.md  resources.md  setup_server.md  testing_client.md  turtle_limitations.md  turtle_serialization.md  using_client.md
docs/changelogs/: v5.0.0_CHANGELOG.md
migrations/: 0001_initial.py
(+38 files in other folders)
