[metadata]
name = djangoldp
version = attr: djangoldp.__version__
url = https://git.happy-dev.fr/happy-dev/djangoldp/
author = Startin'blox
author_email = sylvain@happy-dev.fr
description = Linked Data Platform interface for Django Rest Framework
license = MIT

[options]
packages = find:
setup_requires =
    django~=2.2
install_requires =
    django~=2.2
    django_rest_framework
    requests
    validators~=0.12
    pyld==1.0.5
    django-guardian==2.3.0
    django-brotli
    djangorestframework-guardian

[options.extras_require]
dev =
    validators
    factory_boy>=2.11.0

[semantic_release]
version_source = tag
version_variable = djangoldp/__init__.py:__version__
commit_parser = commit_parser.parse
