[metadata]
name = djangoldp
version = attr: djangoldp.__version__
url = https://git.startinblox.com/djangoldp-packages/djangoldp/
author = Startin'blox
author_email = tech@startinblox.com
description = Linked Data Platform interface for Django Rest Framework
license = MIT

[wheel]
universal = 1

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    django~=4.2
install_requires =
    django~=4.2
    validators~=0.12
    pyld==1.0.5
    django-guardian==2.4.0
    djangorestframework~=3.14
    drf-spectacular~=0.24
    requests==2.23.0
    pyyaml==5.3.1
    pyyaml==5.3.1
    click==7.1.1
    django-brotli~=0.2.0
    djangorestframework-guardian~=0.3.0
    Faker~=14.2

[options.entry_points]
console_scripts =
    djangoldp = djangoldp.cli:main

[options.extras_require]
dev =
    validators
    factory_boy >= 2.11.0
crypto =
    pycryptodomex~=3.10

[semantic_release]
version_source = tag
version_variable = djangoldp/__init__.py:__version__
commit_parser = commit_parser.parse
