[metadata]
name = djangoldp
version = attr: djangoldp.__version__
url = https://git.startinblox.com/djangoldp-packages/djangoldp/
author = Startin'blox
author_email = tech@startinblox.com
description = Linked Data Platform interface for Django Rest Framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[wheel]
universal = 1

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
setup_requires =
    django>=5.2.0,<6.0
install_requires =
    django>=5.2.0,<6.0
    validators~=0.20.0
    pyld~=1.0.0
    django-guardian~=2.4.0
    djangorestframework>=3.14.0,<3.16.0
    drf-spectacular>=0.24.0,<0.28.0
    requests~=2.31.0
    pyyaml~=6.0.0
    click~=8.1.0
    django-brotli~=0.2.0
    djangorestframework-guardian~=0.3.0
    Faker~=14.2.0
    rdflib>=6.0.0

[options.entry_points]
console_scripts =
    djangoldp = djangoldp.cli:main

[options.extras_require]
dev =
    validators
    factory_boy >= 2.11.0
crypto =
    pycryptodomex~=3.10

[semantic_release]
version_source = tag
version_variable = djangoldp/__init__.py:__version__
commit_parser = commit_parser.parse
