[metadata]
name = {{ app_name }}
version = attr: {{ app_name }}.__version__
description = {{ description }}
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:

[semantic_release]
version_source = tag
version_variable = {{ app_name }}/__init__.py:__version__
commit_parser = commit_parser.parse
